2005-12-16  Nathan Sidwell  <nathan@codesourcery.com>

	Second part of ms1 to mt renaming.
	* sid/component/consoles/Makefile.in: Rebuilt.

2005-08-19  Dave Brolley  <brolley@redhat.com>

	* Contribute the following changes:

	2005-07-13  Dave Brolley  <brolley@redhat.com>

	* components.h (socketio): Inherit virtually from
	fixed_attribute_map_component. Inherit from no_relation_component.

	2005-06-06  Dave Brolley  <brolley@redhat.com>

	* components.h: Add using clause for sidutil::configurable_component.
	(socketio): fixed_pin_map_component and configurable_component
	inherited virtually. no_relation_component no longer inherited.
	(configure): New virtual override in socketio.
	* socketio.cxx (configure): Likewise.
	* sid-io-socket.xml: Add description of new interfaces.
	* sid-io-socket.txt: Regenerated.

2005-06-03  Jim Blandy  <jimb@redhat.com>

	* Makefile.in: Regenerated with Automake 1.9.5.

2004-03-22  Dave Brolley  <brolley@redhat.com>

	* socketio.cxx (fini_handler): Flush out remaining data before
	terminating.

2003-07-14  Dave Brolley  <brolley@redhat.com>

	* stdio.cxx (read): Restore flags to their original state.

2003-06-10  Dave Brolley  <brolley@redhat.com>

	* components.h (fileioConsole): New class.
	* components.cxx (compConsoleListTypes): Add sid-io-fileio.
	(compConsoleCreate): Handle sid-io-fileio.
	(compConsoleDelete): Handle fileioConsole.
	* Makefile.am (libconsoles_la_SOURCES): Add fileio.cxx
	(pkgdata_DATA): Add sid-io-fileio.txt.
	* Makefile.in Regenerated.
	* fileio.cxx: New file.
	* sid-io-fileio.txt: New file.
	* sid-io-fileio.xml: New file.
	* sid-io-stdio.xml: Refer to sid-io-fileio component.
	* sid-io-stdio.txt: Regenerated.
	
2002-03-04  Frank Ch. Eigler  <fche@redhat.com>

	* socketio.cxx (tx_handler): Expedite poll.

2001-08-04  Frank Ch. Eigler  <fche@redhat.com>

	* socketio.cxx (~socketio): Define.

2001-08-03  matthew green  <mrg@redhat.com>
	
	* components.h (~socketio): Add prototype.
